Novas rotas para gerenciar endereço e middleware para rotas privadas
